--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.14.14",
+		"@tanstack/react-table": "^8.10.7",
 		"formik": "^2.4.5",
+		"luxon": "^3.4.3",
 		"react": "^18.2.0",
 		"react-datepicker": "^4.21.0",
 		"react-dom": "^18.2.0",
