--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.14.14",
+		"@nivo/line": "^0.83.0",
 		"@nivo/pie": "^0.83.0",
 		"@tanstack/react-table": "^8.10.7",
 		"formik": "^2.4.5",
