--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@nivo/line": "^0.83.0",
 		"@nivo/pie": "^0.83.0",
 		"@tanstack/react-table": "^8.10.7",
+		"axios": "^1.6.2",
 		"formik": "^2.4.5",
 		"luxon": "^3.4.3",
 		"react": "^18.2.0",
