--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-datepicker": "^4.21.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
+		"react-loader-spinner": "^6.1.6",
 		"react-router-dom": "^6.17.0",
 		"react-select": "^5.8.0",
 		"yup": "^1.3.2"
